@@ -74,6 +74,7 @@
 * RedsysRest: Update to $0 verify [almalee24] #4973
 * CommerceHub: Add credit transaction [sinourain] #4965
 * PayTrace: Send CSC value on gateway request. [DustinHaefele] #4974
+* Orbital: Remove needless GSF for TPV [javierpedrozaing] #4959
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
